--- a/angular.json
+++ b/angular.json
@@ -5,7 +5,11 @@
   "projects": {
     "megacopias": {
       "projectType": "application",
-      "schematics": {},
+      "schematics": {
+        "@schematics/angular: ": {
+          "strict": false
+        }
+      },
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -35,13 +39,13 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumWarning": "50000kb",
+                  "maximumError": "10000mb"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "2kb",
-                  "maximumError": "4kb"
+                  "maximumWarning": "2000kb",
+                  "maximumError": "4000kb"
                 }
               ],
               "outputHashing": "all"
@@ -97,6 +101,6 @@
     }
   },
   "cli": {
-    "analytics": "3e7e9f91-7a33-4837-8cc7-a81f7733b4b9"
+    "analytics": false
   }
 }
