--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/core": "^15.0.0",
     "@angular/fire": "^7.5.0",
     "@angular/forms": "^15.0.0",
+    "@angular/material": "^15.2.3",
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
@@ -24,8 +25,11 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.3.0-alpha1",
     "firebase": "^9.18.0",
+    "ngx-cookie-service": "^15.0.0",
+    "ngx-pagination": "^6.0.3",
     "ngx-typed-js": "^2.1.1",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.7.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
