--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ng-bootstrap/ng-bootstrap": "^14.0.1",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.0-alpha1",
+    "bootstrap-icons": "^1.10.3",
     "firebase": "^9.18.0",
     "ngx-cookie-service": "^15.0.0",
     "ngx-pagination": "^6.0.3",
